vm/snapshots/variables-static_fields-primitive_statics-PrimitiveStaticsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Primitive static fields test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Primitive static fields test passed.
----- STDERR -----
