vm/snapshots/variables-static_fields-reference_statics-ReferenceStaticsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Reference static fields test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Reference static fields test passed.
----- STDERR -----
