vm/snapshots/variables-static_fields-static_blocks-StaticBlocksOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Static blocks test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Static blocks test passed.
----- STDERR -----
