vm/snapshots/variables-static_fields-static_field_hiding-StaticFieldHidingOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Static field hiding test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Static field hiding test passed.
----- STDERR -----
