vm/snapshots/variables-static_fields-static_inheritance-StaticInheritanceOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Static inheritance test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Static inheritance test passed.
----- STDERR -----
