vm/snapshots/vm-arrays-objects-get_negative_array_index_should_throw_err-GetNegativeArrayIndexShouldThrowErrMain.class.snap
---
source: vm/src/main.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
java.lang.ArrayIndexOutOfBoundsException: Index -1 out of bounds for length 1
	at arrays.objects.get_negative_array_index_should_throw_err.GetNegativeArrayIndexShouldThrowErrMain.main(GetNegativeArrayIndexShouldThrowErrMain.java:5)
