vm/snapshots/vm-arrays-objects-get_out_of_bound_array_index_should_throw_err-GetOutOfBoundArrayIndexShouldThrowErrMain.class.snap
---
source: vm/src/main.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
java.lang.ArrayIndexOutOfBoundsException: Index 2 out of bounds for length 1
	at arrays.objects.get_out_of_bound_array_index_should_throw_err.GetOutOfBoundArrayIndexShouldThrowErrMain.main(GetOutOfBoundArrayIndexShouldThrowErrMain.java:5)
